--- a/BackendProject/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Views/Shared/_Layout.cshtml
@@ -1,4 +1,14 @@
-﻿<!doctype html>
+﻿@inject ILayoutService _layoutService;
+
+
+@{
+
+    HeaderVM headerDatas = _layoutService.GetHeaderDatas();
+    FooterVM footerDatas = _layoutService.GetFooterDatas();
+}
+
+
+<!doctype html>
 <html class="no-js" lang="en">
 
 
@@ -57,7 +67,7 @@
 
                                     <!-- Header Logo -->
                                     <div class="header-logo col-md-4 col-12">
-                                        <a href="index.html" class="logo"><img src="~/img/logo.png" alt="logo"></a>
+                                        <a href="index.html" class="logo"><img src="~/img/@headerDatas.Logo" alt="logo"></a>
                                     </div>
 
                                     <!-- Account Menu -->
@@ -124,7 +134,7 @@
 
                             <!-- Header Bottom Logo -->
                             <div class="header-bottom-logo">
-                                <a href="index.html" class="logo"><img src="~/img/logo.png" alt="logo"></a>
+                                <a href="index.html" class="logo"><img src="~/img/@headerDatas.Logo" alt="logo"></a>
                             </div>
 
                             <!-- Main Menu -->
@@ -201,7 +211,7 @@
                                 <!-- Footer Widget -->
                                 <div class="footer-widget col-lg-4 col-md-6 col-12 mb-40">
 
-                                    <img class="footer-logo" src="~/img/footer-logo.png" alt="logo">
+                                    <img class="footer-logo" src="~/img/@footerDatas.Logo" alt="logo">
                                     <p>Contrary to popular belief, Lorem Ipsum is nosimply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over Lorem Ipsum is nosimply random text.</p>
 
                                 </div>
@@ -243,10 +253,10 @@
                                     <h4 class="widget-title">Contact Us</h4>
 
                                     <ul>
-                                        <li><span>Address:</span> ur address goes here,street Crossroad 123</li>
-                                        <li><span>Phone:</span> +99 859 658 589 . +69 587 456 25</li>
-                                        <li><span>Eax:</span> +55 784 7585 . + 985 698 586</li>
-                                        <li><span>Email:</span> christ@email.com</li>
+                                        <li><span>Address:</span> @footerDatas.Address</li>
+                                        <li><span>Phone:</span> @footerDatas.Phone</li>
+                                        <li><span>Eax:</span> +@footerDatas.Eax</li>
+                                        <li><span>Email:</span> @footerDatas.Email</li>
                                     </ul>
 
                                 </div>
