--- a/BackendProject/Views/_ViewImports.cshtml
+++ b/BackendProject/Views/_ViewImports.cshtml
@@ -4,6 +4,10 @@
 @using BackendProject.Helpers.Enums
 @using BackendProject.Areas.Admin.ViewModels.Product
 @using BackendProject.Helpers
+@using BackendProject.Services.Interfaces
+@using BackendProject.Areas.Admin.ViewModels.Layout
+
+
 
 
 
