--- a/BackendProject/Views/_ViewImports.cshtml
+++ b/BackendProject/Views/_ViewImports.cshtml
@@ -6,6 +6,8 @@
 @using BackendProject.Helpers
 @using BackendProject.Services.Interfaces
 @using BackendProject.Areas.Admin.ViewModels.Layout
+@using BackendProject.Areas.Admin.ViewModels.Blog
+
 
 
 
