--- a/BackendProject/Views/_ViewImports.cshtml
+++ b/BackendProject/Views/_ViewImports.cshtml
@@ -7,6 +7,8 @@
 @using BackendProject.Services.Interfaces
 @using BackendProject.Areas.Admin.ViewModels.Layout
 @using BackendProject.Areas.Admin.ViewModels.Blog
+@using BackendProject.Areas.Admin.ViewModels.Social
+
 
 
 
