--- a/BackendProject/Views/Blog/Detail.cshtml
+++ b/BackendProject/Views/Blog/Detail.cshtml
@@ -193,7 +193,7 @@
                         <!-- Sdebar Post -->
                         <div class="sidebar-post fix">
                             <!-- Image -->
-                            <a href="blog-details.html" class="image"><img src="~/img/blog/sidebar-post-1.jpg" alt=""></a>
+                            <a  class="image"><img src="~/img/blog/sidebar-post-1.jpg" alt=""></a>
                             <!-- Content -->
                             <div class="content fix">
                                 <span class="date">14 JUN 2016</span>
@@ -205,7 +205,7 @@
                         <!-- Sdebar Post -->
                         <div class="sidebar-post fix">
                             <!-- Image -->
-                            <a href="blog-details.html" class="image"><img src="~/img/blog/sidebar-post-2.jpg" alt=""></a>
+                            <a  class="image"><img src="~/img/blog/sidebar-post-2.jpg" alt=""></a>
                             <!-- Content -->
                             <div class="content fix">
                                 <span class="date">20 JUN 2016</span>
@@ -217,7 +217,7 @@
                         <!-- Sdebar Post -->
                         <div class="sidebar-post fix">
                             <!-- Image -->
-                            <a href="blog-details.html" class="image"><img src="~/img/blog/sidebar-post-3.jpg" alt=""></a>
+                            <a  class="image"><img src="~/img/blog/sidebar-post-3.jpg" alt=""></a>
                             <!-- Content -->
                             <div class="content fix">
                                 <span class="date">20 JUN 2016</span>
