--- a/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -35,10 +35,10 @@
                 </div>
                 <div>
                     <a class="navbar-brand brand-logo" href="index.html">
-                        <img src="images/logo.svg" alt="logo" />
+                        <img src="~/images/logo.svg" alt="logo" />
                     </a>
                     <a class="navbar-brand brand-logo-mini" href="index.html">
-                        <img src="images/logo-mini.svg" alt="logo" />
+                        <img src="~/images/logo-mini.svg" alt="logo" />
                     </a>
                 </div>
             </div>
@@ -379,34 +379,38 @@
                             <span class="menu-title">Dashboard</span>
                         </a>
                     </li>
-                    <li class="nav-item nav-category">UI Elements</li>
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                             <i class="menu-icon mdi mdi-floor-plan"></i>
-                            <span class="menu-title">UI Elements</span>
+                            <span class="menu-title">Home</span>
                             <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Slider" asp-action="Index">Slider</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Advert" asp-action="Index">Advert</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Subscribe" asp-action="Index">Subscribe</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="nav-item nav-category">Forms and Datas</li>
+
+              
+
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
                             <i class="menu-icon mdi mdi-card-text-outline"></i>
-                            <span class="menu-title">Form elements</span>
+                            <span class="menu-title">AboutPage</span>
                             <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="form-elements">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Basic Elements</a></li>
+                                <li class="nav-item"><a class="nav-link" asp-area="Admin" asp-controller="About" asp-action="Index">About</a></li>
+                                <li class="nav-item"><a class="nav-link" asp-area="Admin" asp-controller="Team" asp-action="Index">Team</a></li>
+                                <li class="nav-item"><a class="nav-link" asp-area="Admin" asp-controller="Brand" asp-action="Index">Brand</a></li>
                             </ul>
                         </div>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
                             <i class="menu-icon mdi mdi-chart-line"></i>
