--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@namespace BackendProject.Areas.Admin.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using BackendProject.Areas.Admin.ViewModels.Brand
+@using BackendProject.Areas.Admin.ViewModels.Advert
+
