--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using BackendProject.Areas.Admin.ViewModels.Brand
 @using BackendProject.Areas.Admin.ViewModels.Advert
+@using BackendProject.Areas.Admin.ViewModels.Slider
+
 
