--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,5 +3,7 @@
 @using BackendProject.Areas.Admin.ViewModels.Brand
 @using BackendProject.Areas.Admin.ViewModels.Advert
 @using BackendProject.Areas.Admin.ViewModels.Slider
+@using BackendProject.Areas.Admin.ViewModels.Team
+
 
 
