--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @using BackendProject.Areas.Admin.ViewModels.Advert
 @using BackendProject.Areas.Admin.ViewModels.Slider
 @using BackendProject.Areas.Admin.ViewModels.Team
+@using BackendProject.Areas.Admin.ViewModels.Contact
+
 
 
 
