--- a/BackendProject/Areas/Admin/Views/Advert/Edit.cshtml
+++ b/BackendProject/Areas/Admin/Views/Advert/Edit.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container mt-5" style="margin-left:30px">
-    <form class="forms-sample" method="post" enctype="multipart/form-data">
+    <form class="forms-sample" method="post" asp-action="Edit" enctype="multipart/form-data">
 
         <div class="form-group mb-3">
             <label asp-for="Description">Description</label>
