--- a/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -35,10 +35,10 @@
                 </div>
                 <div>
                     <a class="navbar-brand brand-logo" href="index.html">
-                        <img src="~/images/logo.svg" alt="logo" />
+                        <img src="~admin/images/logo.svg" alt="logo" />
                     </a>
                     <a class="navbar-brand brand-logo-mini" href="index.html">
-                        <img src="~/images/logo-mini.svg" alt="logo" />
+                        <img src="~admin/images/logo-mini.svg" alt="logo" />
                     </a>
                 </div>
             </div>
@@ -382,7 +382,7 @@
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                             <i class="menu-icon mdi mdi-floor-plan"></i>
-                            <span class="menu-title">Home</span>
+                            <span class="menu-title">HomePage</span>
                             <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="ui-basic">
@@ -414,12 +414,14 @@
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
                             <i class="menu-icon mdi mdi-chart-line"></i>
-                            <span class="menu-title">Charts</span>
+                            <span class="menu-title">Contact</span>
                             <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="charts">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="pages/charts/chartjs.html">ChartJs</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Contact" asp-action="MessageIndex">ContactMessage</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Contact" asp-action="InfoIndex">ContactInfo</a></li>
+
                             </ul>
                         </div>
                     </li>
