--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,6 +5,8 @@
 @using BackendProject.Areas.Admin.ViewModels.Slider
 @using BackendProject.Areas.Admin.ViewModels.Team
 @using BackendProject.Areas.Admin.ViewModels.Contact
+@using BackendProject.Areas.Admin.ViewModels.Subscribe
+
 
 
 
