--- a/BackendProject/Areas/Admin/Views/Advert/Index.cshtml
+++ b/BackendProject/Areas/Admin/Views/Advert/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container" style="margin-left:30px">
-    <h1 class="text-center mt-3 mb-3">Brands</h1>
+    <h1 class="text-center mt-3 mb-3">Adverts</h1>
     <a class="btn btn-success text-white" asp-action="Create">Create</a>
     <div class="table-responsive">
         <table class="table table-striped">
@@ -19,6 +19,10 @@
                     </th>
                     <th>
                         Text Direction
+                    </th>
+
+                    <th>
+                        CreatedDate
                     </th>
 
                     <th>
@@ -38,6 +42,9 @@
                         </td>
                         <td class="py-1">
                             @item.Direction
+                        </td>
+                        <td>
+                            @item.CreatedDate.ToString("MM/dd/yyyy")
                         </td>
                         <td>
                             <a class="btn btn-outline-info" asp-action="Detail" asp-route-id="@item.Id">Detail</a>
