--- a/BackendProject/Views/Contact/Index.cshtml
+++ b/BackendProject/Views/Contact/Index.cshtml
@@ -48,7 +48,7 @@
 
                         <div class="contact-info col-lg-5 col-12">
                             <h4 class="title">Contact Info</h4>
-                            <p>@Model.Contact.Description</p>
+                            <p>@Model.Contact.Descriptiom</p>
                             <ul>
                                 <li><span>Address:</span>@Model.Contact.Address</li>
                                 <li><span>Email:</span>@Model.Contact.Email</li>
