--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,6 +6,8 @@
 @using BackendProject.Areas.Admin.ViewModels.Team
 @using BackendProject.Areas.Admin.ViewModels.Contact
 @using BackendProject.Areas.Admin.ViewModels.Subscribe
+@using BackendProject.Areas.Admin.ViewModels.About
+
 
 
 
