--- a/BackendProject/Views/Home/Index.cshtml
+++ b/BackendProject/Views/Home/Index.cshtml
@@ -178,7 +178,7 @@
                 <form asp-action="CreateSubscribe" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="subscribe-form validate">
                     <div id="mc_embed_signup_scroll">
                         <label asp-for="@Model.Subscribe.Email" class="d-none">Subscribe to our mailing list</label>
-                        <input asp-for="@Model.Subscribe.Email" class="email subscribe-input" id="mce-EMAIL" placeholder="Your email address">
+                        <input asp-for="@Model.Subscribe.Email" class="email subscribe-input" id="mce-EMAIL" required placeholder="Your email address">
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef" tabindex="-1" value=""></div>
                         <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button">subscribe</button>
