--- a/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -390,6 +390,9 @@
                                 <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Slider" asp-action="Index">Slider</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Advert" asp-action="Index">Advert</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Subscribe" asp-action="Index">Subscribe</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Review" asp-action="Index">Review</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Customer" asp-action="Index">Customer</a></li>
+
                             </ul>
                         </div>
                     </li>
