--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,6 +7,10 @@
 @using BackendProject.Areas.Admin.ViewModels.Contact
 @using BackendProject.Areas.Admin.ViewModels.Subscribe
 @using BackendProject.Areas.Admin.ViewModels.About
+@using BackendProject.Areas.Admin.ViewModels.Review
+@using BackendProject.Areas.Admin.ViewModels.Customer
+
+
 
 
 
