--- a/BackendProject/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Views/Shared/_Layout.cshtml
@@ -179,8 +179,8 @@
 
                                 <!-- Search Form -->
                                 <div class="header-search-form">
-                                    <form action="#" class="hm-searchbox">
-                                        <input type="text" class="input-search" placeholder="Search...">
+                                    <form action="#" class="search-form">
+                                        <input type="text" class="search-input" placeholder="Search...">
                                         <button><i class="ion-ios-search-strong"></i></button>
                                     </form>
                                 </div>
